--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,8 +7,8 @@ services:
       container_name: mysql-db  
       environment:
         - MYSQL_ROOT_PASSWORD=spring
-      ports:
-        - "3306:3306"
+      # ports:
+      #   - "3306:3306"
       restart: always
       healthcheck:
           test: ["CMD", "mysqladmin" ,"ping", "-h", "localhost"]
