--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -34,3 +34,18 @@ services:
         SPRING_DATASOURCE_URL: jdbc:mysql://mysql-db:3306/notebook_manager?createDatabaseIfNotExist=true&useSSL=false
         SPRING_DATASOURCE_USERNAME: root
         SPRING_DATASOURCE_PASSWORD: spring
+    
+    otelcollector:
+      image: otel/opentelemetry-collector-contrib:latest
+      command: ["--config=/etc/otelcol-contrib/config.yaml"]
+      volumes:
+        - ./agent/config.yaml:/etc/otelcol-contrib/config.yaml
+      # ports:
+      #   - 4317:4317   # OTLP gRPC receiver
+      #   - 4318:4318   # OTLP http receiver
+
+
+    allinone:
+      image: jaegertracing/all-in-one:latest
+      ports:
+        - "16686:16686"
