add full client-server

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,10 @@ spring.datasource.password=
 
 #logging.level.root=debug
 
+management.metrics.export.influx.uri=http://58.84.0.15:8086
+# management.metrics.export.influx.db=db0
+management.metrics.export.influx.user-name=admin
+management.metrics.export.influx.password=admin
+
+	
+management.endpoints.web.exposure.include=health,info,prometheus
