--- a/agent/file.properties
+++ b/agent/file.properties
@@ -1,4 +1,4 @@
 otel.service.name=your-service-name
 otel.traces.exporter=otlp
 otel.exporter.otlp.protocol=grpc
-otel.exporter.otlp.traces.endpoint=http://otelcollector:4317
+otel.exporter.otlp.traces.endpoint=http://58.84.0.15:4317
