--- a/client/docker-compose.yml
+++ b/client/docker-compose.yml
@@ -40,6 +40,20 @@ services:
     ports:
       - 9090:9090
     restart: always
+  
+  otelcollector:
+    image: otel/opentelemetry-collector-contrib:latest
+    command: ["--config=/etc/otelcol-contrib/config.yaml"]
+    volumes:
+      - ./agent/config.yaml:/etc/otelcol-contrib/config.yaml
+    ports:
+      - 4317:4317   # OTLP gRPC receiver
+      - 4318:4318   # OTLP http receiver
+
+  allinone:
+    image: jaegertracing/all-in-one:latest
+    ports:
+      - "16686:16686"
 
 
 
