--- a/client/docker-compose.yml
+++ b/client/docker-compose.yml
@@ -4,10 +4,14 @@ services:
     image: influxdb:1.8
     ports:
       - '8086:8086'
+    volumes:
+      - influxdb-storage:/var/lib/influxdb
     environment:
       - INFLUXDB_DB=db0
       - INFLUXDB_ADMIN_USER=admin
       - INFLUXDB_ADMIN_PASSWORD=admin
+    restart: always
+
   chronograf:
     image: chronograf:latest
     ports:
@@ -18,20 +22,26 @@ services:
       - INFLUXDB_URL=http://influxdb:8086
       - INFLUXDB_USERNAME=admin
       - INFLUXDB_PASSWORD=admin
+    restart: always
+
   grafana:
     image: grafana/grafana:latest
     ports:
       - '3000:3000'
+    volumes:
+      - grafana-storage:/var/lib/grafana
     depends_on:
       - influxdb
     environment:
       - GF_SECURITY_ADMIN_USER=admin
       - GF_SECURITY_ADMIN_PASSWORD=admin
+    restart: always
   
   prometheus:
     image: prom/prometheus:latest
     volumes:
       - ./prometheus/prometheus.yml:/etc/prometheus/prometheus.yml
+      - prometheus-storage:/prometheus
     command:
       - '--config.file=/etc/prometheus/prometheus.yml'
       - '--storage.tsdb.path=/prometheus'
@@ -49,12 +59,18 @@ services:
     ports:
       - 4317:4317   # OTLP gRPC receiver
       - 4318:4318   # OTLP http receiver
+    restart: always
 
   allinone:
     image: jaegertracing/all-in-one:latest
     ports:
       - "16686:16686"
+    restart: always
 
+volumes:
+  influxdb-storage:
+  grafana-storage:
+  prometheus-storage:
 
 
 
