add tracing server

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -35,4 +35,14 @@ services:
         SPRING_DATASOURCE_USERNAME: root
         SPRING_DATASOURCE_PASSWORD: spring
     
+    otelcollector:
+      image: otel/opentelemetry-collector-contrib:latest
+      command: ["--config=/etc/otelcol-contrib/config.yaml"]
+      volumes:
+        - ./agent/config-agent.yaml:/etc/otelcol-contrib/config.yaml
+      # ports:
+      #   - 4317:4317   # OTLP gRPC receiver
+      #   - 4318:4318   # OTLP http receiver
+      restart: always
+    
     
