--- a/tracing-server/docker-compose.yml
+++ b/tracing-server/docker-compose.yml
@@ -4,7 +4,7 @@ services:
     image: otel/opentelemetry-collector-contrib:latest
     command: ["--config=/etc/otelcol-contrib/config.yaml"]
     volumes:
-      - ./agent/config-collector.yaml:/etc/otelcol-contrib/config.yaml
+      - ./config-collector.yaml:/etc/otelcol-contrib/config.yaml
     ports:
       - 4317:4317   # OTLP gRPC receiver
       - 4318:4318   # OTLP http receiver
