--- a/spring-app/src/main/resources/application.properties
+++ b/spring-app/src/main/resources/application.properties
@@ -9,8 +9,8 @@ spring.datasource.password=
 #logging.level.root=debug
 
 # management.metrics.export.influx.db=db0
-management.metrics.export.influx.user-name=admin
-management.metrics.export.influx.password=admin
+# management.metrics.export.influx.user-name=admin
+# management.metrics.export.influx.password=admin
 
 	
 management.endpoints.web.exposure.include=health,info,prometheus
