--- a/server/no_agent/docker-compose.yml
+++ b/server/no_agent/docker-compose.yml
@@ -21,7 +21,7 @@ services:
       image: notebook-service
       container_name: notebook-service-app     # name of container created from image
       build:
-        context: ../     # path to docker file
+        context: ../                      # path to docker file
         dockerfile: Dockerfile              # docker file name
       ports:
         - "8090:8080"                       # notebook service port
@@ -34,6 +34,15 @@ services:
         SPRING_DATASOURCE_URL: jdbc:mysql://mysql-db:3306/notebook_manager?createDatabaseIfNotExist=true&useSSL=false
         SPRING_DATASOURCE_USERNAME: root
         SPRING_DATASOURCE_PASSWORD: spring
+      command:
+        # - "-javaagent:./agent/opentelemetry-javaagent.jar"
+        - "-XX:ActiveProcessorCount=6"
+        - "-Xms8g"
+        - "-Xmx12g"
+        # - "-Dotel.javaagent.configuration-file=./agent/file.properties"
+        - "-jar"
+        - "./NoteBookManagerRest-0.0.1-SNAPSHOT.jar"
+        # .........................
       deploy:
         resources:
           limits:
