--- a/server/file.properties
+++ b/server/file.properties
@@ -5,3 +5,5 @@ otel.exporter.otlp.traces.endpoint=http://10.76.0.10:4317
 
 
 # ...........................
+otel.traces.sampler=traceidratio
+otel.traces.sampler.arg=0.01
